# traceforge-react

./: README.en-US.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
integrations/camoufox-reverse-mcp/: README.md  README_en.md  pyproject.toml
integrations/camoufox-reverse-mcp/tests/: conftest.py  test_browser.py  test_tools.py
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/__handlers__/aaudio_aidl_cpp.so/: _ZN6aaudio10RingBuffer14readFrom_84936453.js  _ZN6aaudio12SharedRegion14readFr_2486a7f2.js  _ZN6aaudio13IAAudioClient11asInt_62fd3c86.js  _ZN6aaudio13IAAudioClient14getDe_a892b4f7.js  _ZN6aaudio13IAAudioClient14setDe_b5604e71.js  _ZN6aaudio13IAAudioClientC2Ev.js  _ZN6aaudio13IAAudioClientD0Ev.js  _ZN6aaudio13IAAudioClientD1Ev.js  _ZN6aaudio13IAAudioClientD2Ev.js  _ZN6aaudio13StreamRequest14readF_200cf412.js  _ZN6aaudio14BnAAudioClient10onTr_5938d70c.js  _ZN6aaudio14BnAAudioClientC2Ev.js  _ZN6aaudio14BpAAudioClient14onSt_889087a4.js  _ZN6aaudio14BpAAudioClientC1ERKN_f34c2aea.js  _ZN6aaudio14BpAAudioClientC2ERKN_3a532255.js  _ZN6aaudio14IAAudioService11asIn_f85856c6.js  _ZN6aaudio14IAAudioService14getD_727d619f.js  _ZN6aaudio14IAAudioService14setD_e0162646.js  _ZN6aaudio14IAAudioServiceC2Ev.js  _ZN6aaudio14IAAudioServiceD0Ev.js  _ZN6aaudio14IAAudioServiceD1Ev.js  _ZN6aaudio14IAAudioServiceD2Ev.js  _ZN6aaudio15BnAAudioService10onT_9eaed9e3.js  _ZN6aaudio15BnAAudioServiceC2Ev.js  _ZN6aaudio15BpAAudioService10ope_76063fba.js  _ZN6aaudio15BpAAudioService10sto_9931b846.js  _ZN6aaudio15BpAAudioService11clo_64e906d8.js  _ZN6aaudio15BpAAudioService11exi_b2417f73.js  _ZN6aaudio15BpAAudioService11flu_12a235a8.js  _ZN6aaudio15BpAAudioService11pau_08544349.js  _ZN6aaudio15BpAAudioService11sta_7b5be019.js  _ZN6aaudio15BpAAudioService14reg_9850bcc5.js  _ZN6aaudio15BpAAudioService19reg_21738c70.js  _ZN6aaudio15BpAAudioService20get_8633760d.js  _ZN6aaudio15BpAAudioService21unr_fd33a600.js  _ZN6aaudio15BpAAudioServiceC1ERK_50ab65cd.js  _ZN6aaudio15BpAAudioServiceC2ERK_99b46d72.js  _ZN6aaudio16StreamParameters14re_9601d780.js  _ZN6aaudio8Endpoint14readFromPar_272a05da.js  _ZNK6aaudio10RingBuffer13writeTo_e1e31c16.js  (+12 more)
src-tauri/__handlers__/android.hardware.drm_1.0.so/: _ZN7android8hardware3drm4V1_013B_02ec363e.js  _ZN7android8hardware3drm4V1_013B_0726b1e6.js  _ZN7android8hardware3drm4V1_013B_153fb57d.js  _ZN7android8hardware3drm4V1_013B_a530a6d0.js  _ZN7android8hardware3drm4V1_013B_aa799dda.js  _ZN7android8hardware3drm4V1_013B_bb9294e9.js  _ZN7android8hardware3drm4V1_016B_6a797be3.js  _ZN7android8hardware3drm4V1_016B_8c1ab7de.js  _ZN7android8hardware3drm4V1_016B_e77b1fb2.js
src-tauri/__handlers__/libcrypto.so/: AES_cfb128_encrypt.js  (+33 more)
src-tauri/capabilities/: default.json
src-tauri/src/: agent_manager.rs  lib.rs  thread_manager.rs
(+1248 files in other folders)
