[package]
name = "app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12.24", features = ["multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1.51.0", features = ["full"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
regex = "1"
walkdir = "2"
sha2 = "0.10"
md-5 = "0.10"
memmap2 = "0.9"
tauri-plugin-updater = "2.10.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-deep-link = "2.4.8"





